--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
+    "async": "^0.9.0",
     "numeric": "^1.2.6",
     "paralleljs": "^0.2.1",
+    "promised-exec": "^1.0.1",
     "socket.io": "~0.9.14",
     "xmlhttprequest": "1.6.0"
   }
