--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "^0.9.0",
+    "moment": "^2.9.0",
     "numeric": "^1.2.6",
     "paralleljs": "^0.2.1",
     "promised-exec": "^1.0.1",
